fix large gap between carousel and content

--- a/tarot_juicer/static/css/carousel.css
+++ b/tarot_juicer/static/css/carousel.css
@@ -6,7 +6,6 @@
 
 .carousel {
   width: var(--carousel-width);
-  height: 250px;
   margin: 20px auto;
 }
 
